--- a/src/views/common/rnav.ejs
+++ b/src/views/common/rnav.ejs
@@ -1,7 +1,137 @@
 <div class="right-section">
-    <div class="feed-wrapper">
-        <div class="feed-trending-card">
-            <h3 class="feed-card-header">Trending</h3><div class="feed-card-trend"><div>1 · Trending</div><div>#lmao</div><div>14 Tweets</div></div><div class="feed-card-trend"><div>2 · Trending</div><div>#streamnickiminaj</div><div>10 Tweets</div></div><div class="feed-card-trend"><div>3 · Trending</div><div>#hello_world</div><div>8 Tweets</div></div><div class="feed-more">Show more</div></div><div class="feed-trending-card"><h3 class="feed-card-header">Who to follow</h3><div class="feed-card-trend"><div class="sugg-result-wapper"><a class="search-userPic-wrapper" href="/profile/alimodz"><img alt="" width="100%" height="49px" src="https://i.imgur.com/iV7Sdgm.jpg" style="border-radius: 50%; min-width: 49px;"></a><div class="search-user-details"><div class="search-user-warp"><div class="search-user-info"><div class="search-user-name">ali hd</div><div class="search-user-username">@alimodz</div></div><div class="follow-btn-wrap"><span style="line-height: 0.8;"><span>Follow</span></span></div></div></div></div></div><div class="feed-card-trend"><div class="sugg-result-wapper"><a class="search-userPic-wrapper" href="/profile/rash"><img alt="" width="100%" height="49px" src="https://i.imgur.com/iV7Sdgm.jpg" style="border-radius: 50%; min-width: 49px;"></a><div class="search-user-details"><div class="search-user-warp"><div class="search-user-info"><div class="search-user-name">rashid</div><div class="search-user-username">@rash</div></div><div class="follow-btn-wrap"><span style="line-height: 0.8;"><span>Follow</span></span></div></div></div></div></div><div class="feed-card-trend"><div class="sugg-result-wapper"><a class="search-userPic-wrapper" href="/profile/eloon"><img alt="" width="100%" height="49px" src="https://i.imgur.com/iV7Sdgm.jpg" style="border-radius: 50%; min-width: 49px;"></a><div class="search-user-details"><div class="search-user-warp"><div class="search-user-info"><div class="search-user-name">elon musk</div><div class="search-user-username">@eloon</div></div><div class="follow-btn-wrap"><span style="line-height: 0.8;"><span>Follow</span></span></div></div></div></div></div><div class="feed-card-trend"><div class="sugg-result-wapper"><a class="search-userPic-wrapper" href="/profile/supper"><img alt="" width="100%" height="49px" src="https://i.imgur.com/iV7Sdgm.jpg" style="border-radius: 50%; min-width: 49px;"></a><div class="search-user-details"><div class="search-user-warp"><div class="search-user-info"><div class="search-user-name">ganme</div><div class="search-user-username">@supper</div></div><div class="follow-btn-wrap"><span style="line-height: 0.8;"><span>Follow</span></span></div></div></div></div></div><div class="feed-more"></div>
-        </div>
+  <div class="padding_wrap">
+    <form class="single_search p_relative">
+      <input type="text" placeholder="Search..." />
+      <span class="search_icon p_absolute"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="18"
+          height="18"
+          fill="#657786"
+          class="bi bi-search"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+          /></svg
+      ></span>
+    </form>
+  </div>
+  <div class="feed-wrapper">
+    <div class="feed-trending-card mt-0">
+      <h3 class="feed-card-header">Trending</h3>
+      <div class="feed-card-trend">
+        <div>1 · Trending</div>
+        <div>#lmao</div>
+        <div>14 Tweets</div>
+      </div>
+      <div class="feed-card-trend">
+        <div>2 · Trending</div>
+        <div>#streamnickiminaj</div>
+        <div>10 Tweets</div>
+      </div>
+      <div class="feed-card-trend">
+        <div>3 · Trending</div>
+        <div>#hello_world</div>
+        <div>8 Tweets</div>
+      </div>
+      <div class="feed-more">Show more</div>
     </div>
+    <div class="feed-trending-card">
+      <h3 class="feed-card-header">Who to follow</h3>
+      <div class="feed-card-trend">
+        <div class="sugg-result-wapper">
+          <a class="search-userPic-wrapper" href="/profile/alimodz"
+            ><img
+              alt=""
+              width="100%"
+              height="49px"
+              src="https://i.imgur.com/iV7Sdgm.jpg"
+              style="border-radius: 50%; min-width: 49px"
+          /></a>
+          <div class="search-user-details">
+            <div class="search-user-warp">
+              <div class="search-user-info">
+                <div class="search-user-name">ali hd</div>
+                <div class="search-user-username">@alimodz</div>
+              </div>
+              <div class="follow-btn-wrap">
+                <span style="line-height: 0.8"><span>Follow</span></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="feed-card-trend">
+        <div class="sugg-result-wapper">
+          <a class="search-userPic-wrapper" href="/profile/rash"
+            ><img
+              alt=""
+              width="100%"
+              height="49px"
+              src="https://i.imgur.com/iV7Sdgm.jpg"
+              style="border-radius: 50%; min-width: 49px"
+          /></a>
+          <div class="search-user-details">
+            <div class="search-user-warp">
+              <div class="search-user-info">
+                <div class="search-user-name">rashid</div>
+                <div class="search-user-username">@rash</div>
+              </div>
+              <div class="follow-btn-wrap">
+                <span style="line-height: 0.8"><span>Follow</span></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="feed-card-trend">
+        <div class="sugg-result-wapper">
+          <a class="search-userPic-wrapper" href="/profile/eloon"
+            ><img
+              alt=""
+              width="100%"
+              height="49px"
+              src="https://i.imgur.com/iV7Sdgm.jpg"
+              style="border-radius: 50%; min-width: 49px"
+          /></a>
+          <div class="search-user-details">
+            <div class="search-user-warp">
+              <div class="search-user-info">
+                <div class="search-user-name">elon musk</div>
+                <div class="search-user-username">@eloon</div>
+              </div>
+              <div class="follow-btn-wrap">
+                <span style="line-height: 0.8"><span>Follow</span></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="feed-card-trend">
+        <div class="sugg-result-wapper">
+          <a class="search-userPic-wrapper" href="/profile/supper"
+            ><img
+              alt=""
+              width="100%"
+              height="49px"
+              src="https://i.imgur.com/iV7Sdgm.jpg"
+              style="border-radius: 50%; min-width: 49px"
+          /></a>
+          <div class="search-user-details">
+            <div class="search-user-warp">
+              <div class="search-user-info">
+                <div class="search-user-name">ganme</div>
+                <div class="search-user-username">@supper</div>
+              </div>
+              <div class="follow-btn-wrap">
+                <span style="line-height: 0.8"><span>Follow</span></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="feed-more"></div>
+    </div>
+  </div>
 </div>
