--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,12 +7,7 @@
           <%- include('./common/topnav') %>
           <div class="explore-nav-menu">
             <div class="explore-nav-item activeTab">Latest</div>
-            <div
-              class="explore-nav-item"
-              onclick="window.location.href='/trending'"
-            >
-              Trending
-            </div>
+            <div class="explore-nav-item" onclick="window.location.href='/trending'">Trending</div>
           </div>
           <%- include('./common/home')%>
         </div>
