--- a/src/views/common/reply.ejs
+++ b/src/views/common/reply.ejs
@@ -1,22 +1,24 @@
 <form class="reply-to-post" id="reply-to-post-form">
-	<p class="reply-ttl">Replying to <a href="#">@ProthomAlo</a></p>
+	<p class="reply-ttl">Replying to <a href="#">@<%-userHandle%></a></p>
 	<div class="u-avater-out-grid">
-		<div class="tweet_avater">
-			<img src="https://i.imgur.com/iV7Sdgm.jpg">
-		</div>
+		<div class="profile-user-pic">
+            <a href="/profile/<%- userHandle %>">
+                <% if(userImg){ %>
+                <img alt="" width="100%" height="49px" src="<%-userImg %>" class="home_pro_pic" />
+                <%}else{%>
+                <img alt="" width="100%" height="49px" src="https://i.postimg.cc/MZdNmMMN/user.png" class="home_pro_pic" />
+                <%}%>
+            </a>
+        </div>
 		<div class="tweet_content">
-			<textarea name="" id="reply-input" cols="10" rows="1" placeholder="Tweet your reply"></textarea>
+			<textarea name="" id="reply-input" cols="10" rows="2" placeholder="Leave reply"></textarea>
 			<div class="ct_footer_left">
 				<div class="tweet_content_options media">
-					<label for="media"
-						style="display: flex; align-items: center; justify-content: center; height: 100%; position: relative;">
-						<input type="file" id="media"
-							style="max-width: 0; max-height: 0; opacity: 0; visibility: hidden; position: absolute;">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1da1f2" class="bi bi-image"
-							viewBox="0 0 16 16">
+					<label for="media" style="display: flex; align-items: center; justify-content: center; height: 100%; position: relative;">
+						<input type="file" id="media" style="max-width: 0; max-height: 0; opacity: 0; visibility: hidden; position: absolute;">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1da1f2" class="bi bi-image" viewBox="0 0 16 16">
 							<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
-							<path
-								d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z" />
+							<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z" />
 						</svg>
 					</label>
 				</div>
