--- a/src/views/post.ejs
+++ b/src/views/post.ejs
@@ -3,7 +3,7 @@
 	//console.log(post)
 	const IPFS_GATEWAY = 'https://gateway.ipfscdn.io/ipfs/';
 	const userHandle = (post.profile.handle).replace('.lens', "")
-	const userImg = post.profile.picture?.original?.url 
+	const userImg = (post.profile.picture?.original?.url).replace('ipfs://', IPFS_GATEWAY);
 	const contentMedia = post.metadata?.media
 	const linkyfyOptions = {truncate: 26,className:'blink',nl2br:true,formatHref: {
 	    hashtag: (val) => `/hashtag/${val.substr(1)}`,
@@ -26,7 +26,7 @@
 	                                <div class="profile-user-pic">
 	                                    <a href="/profile/<%- userHandle %>">
 	                                        <% if(userImg){ %>
-	                                        <img alt="" width="100%" height="49px" src="<%- userImg.replace('ipfs://', IPFS_GATEWAY); %>" class="home_pro_pic" />
+	                                        <img alt="" width="100%" height="49px" src="<%-userImg %>" class="home_pro_pic" />
 	                                        <%}else{%>
 	                                        <img alt="" width="100%" height="49px" src="https://i.postimg.cc/MZdNmMMN/user.png" class="home_pro_pic" />
 	                                        <%}%>
@@ -34,7 +34,7 @@
 	                                </div>
 	                                <div class="profile-user-wrap user_name">
                                         	<h5><a href="/profile/<%- userHandle %>"><b><%- post.profile?.name %></b><%- userHandle %></a></h5>
-											<span>@abdullah</span>
+											<span>@<%-userHandle %></span>
 	                                </div>
 									<div class="post_header-dropdown-wrap p_absolute drop_down">
 										<span class="three_dot-wrapper drop_down_trigger" ><svg class="three_dot p_relative" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#000000" viewBox="0 0 16 16">
@@ -92,39 +92,9 @@
 	                            	<%- moment(post.createdAt, 'YYYY-MM-DDTHH:mm:ss.SSS[Z]').format('lll')%> <b>.</b> Posted via <%- (post.appId).charAt(0).toUpperCase() + post.appId.slice(1)%>
 	                            </p>
 	                        </div>
-	                        <div class="card-buttons-wrapper likes_section">
-						    <div class="card-button-wrap">
-						        <div class="card-icon" data-permlink="" data-author="">
-						          <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi"><g><path d="M1.751 10c0-4.42 3.584-8 8.005-8h4.366c4.49 0 8.129 3.64 8.129 8.13 0 2.96-1.607 5.68-4.196 7.11l-8.054 4.46v-3.69h-.067c-4.49.1-8.183-3.51-8.183-8.01zm8.005-6c-3.317 0-6.005 2.69-6.005 6 0 3.37 2.77 6.08 6.138 6.01l.351-.01h1.761v2.3l5.087-2.81c1.951-1.08 3.163-3.13 3.163-5.36 0-3.39-2.744-6.13-6.129-6.13H9.756z"></path></g></svg>
-						        </div>
-						        <div class="card-icon-value"><%-post.stats.totalAmountOfComments%></div>
-						      </div>
-						      <div class="card-button-wrap">
-						        <div class="card-icon" data-permlink="" data-author="">
-						          <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi"><g><path d="M4.5 3.88l4.432 4.14-1.364 1.46L5.5 7.55V16c0 1.1.896 2 2 2H13v2H7.5c-2.209 0-4-1.79-4-4V7.55L1.432 9.48.068 8.02 4.5 3.88zM16.5 6H11V4h5.5c2.209 0 4 1.79 4 4v8.45l2.068-1.93 1.364 1.46-4.432 4.14-4.432-4.14 1.364-1.46 2.068 1.93V8c0-1.1-.896-2-2-2z"></path></g></svg>
-						        </div>
-						        <div class="card-icon-value"><%-post.stats.totalAmountOfMirrors %></div>
-						      </div>
-						      <div class="card-button-wrap">
-						        <div class="card-icon" data-permlink="" data-author="">
-						          <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi"><g><path d="M16.697 5.5c-1.222-.06-2.679.51-3.89 2.16l-.805 1.09-.806-1.09C9.984 6.01 8.526 5.44 7.304 5.5c-1.243.07-2.349.78-2.91 1.91-.552 1.12-.633 2.78.479 4.82 1.074 1.97 3.257 4.27 7.129 6.61 3.87-2.34 6.052-4.64 7.126-6.61 1.111-2.04 1.03-3.7.477-4.82-.561-1.13-1.666-1.84-2.908-1.91zm4.187 7.69c-1.351 2.48-4.001 5.12-8.379 7.67l-.503.3-.504-.3c-4.379-2.55-7.029-5.19-8.382-7.67-1.36-2.5-1.41-4.86-.514-6.67.887-1.79 2.647-2.91 4.601-3.01 1.651-.09 3.368.56 4.798 2.01 1.429-1.45 3.146-2.1 4.796-2.01 1.954.1 3.714 1.22 4.601 3.01.896 1.81.846 4.17-.514 6.67z"></path></g></svg>
-						        </div>
-						        <div class="card-icon-value"><%-post.stats?.totalUpvotes %></div>
-						      </div>
-						      <div class="card-button-wrap">
-						        <div class="card-icon" data-permlink="" data-author="">
-						          <svg viewBox="0 0 64 64" data-name="Layer 1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"><title/><path d="M53.94,54.93H10.06a2,2,0,0,1-2-2V30.6a2,2,0,0,1,2-2H53.94a2,2,0,0,1,2,2V52.93A2,2,0,0,1,53.94,54.93Zm-41.88-4H51.94V32.6H12.06Z"/><path d="M49.94,32.6H14.06a2,2,0,0,1-2-2V19.83a2,2,0,0,1,2-2H49.94a2,2,0,0,1,2,2V30.6A2,2,0,0,1,49.94,32.6Zm-33.88-4H47.94V21.83H16.06Z"/><path d="M45.6,21.83H18.4a2,2,0,0,1-2-2V11.06a2,2,0,0,1,2-2H45.6a2,2,0,0,1,2,2v8.77A2,2,0,0,1,45.6,21.83Zm-25.2-4H43.6V13.06H20.4Z"/></svg>
-						        </div>
-						        <div class="card-icon-value"><%-post.stats?.totalAmountOfCollects %></div>
-						      </div>
-						      <div class="card-button-wrap">
-						        <div class="card-icon" data-permlink="" data-author="">
-						          <svg viewBox="0 0 24 24" aria-hidden="true" class="r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1hdv0qi"><g><path d="M12 2.59l5.7 5.7-1.41 1.42L13 6.41V16h-2V6.41l-3.3 3.3-1.41-1.42L12 2.59zM21 15l-.02 3.51c0 1.38-1.12 2.49-2.5 2.49H5.5C4.11 21 3 19.88 3 18.5V15h2v3.5c0 .28.22.5.5.5h12.98c.28 0 .5-.22.5-.5L19 15h2z"></path></g></svg>
-						        </div>
-						      </div>
-						    </div>
+						    <%- include('./common/postStats', {article: post}) %>
 						    <div class="reply-sec">
-	                        	<%- include('./common/reply') %>
+	                        	<%- include('./common/reply', {userHandle: userHandle, userImg: userImg}) %>
 	                        </div>
 						    <%- include('./common/comments') %>
 	                    </div>
